added swagger docs for categories
